2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c (rbclt_texture_init): Renamed
	Clutter::Texture::Error to Clutter::TextureError to match the rest
	of the error classes.

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c: Update to 0.8 so that it doesn't include
	anything related to pixbufs and removes the properties for
	accessing the tiles. (Tiles can now be accessed from the Cogl
	texture)

	* clutter/rbcltactor.h: 
	* clutter/rbcltactor.c: Make the actor class a public variable.

	* clutter/extconf.rb: gdk-pixbuf is no longer required

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* README: Updated

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added a wrapper for
	Clutter::Container#get_child_meta

	* clutter/rbcltchildmeta.c: Added a wrapper for Clutter::ChildMeta

	* clutter/extconf.rb: Added rbcltchildmeta.o

	* clutter/rbclutter.c (Init_clutter): Call rbclt_child_meta_init

2008-07-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Added an override for the 'type_register'
	class method so that custom subclasses of Clutter::Actor won't
	break the reference counting.

2008-07-21  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: Converted to use the boxed value of
	CLUTTER_TYPE_TEXTURE_HANDLE so that it can be used as a value for
	the 'cogl_texture' property of Clutter::Texture.

2008-07-21  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added bindings for handling the child
	meta data properties.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogloffscreen.c: 
	* clutter/extconf.rb: 
	* clutter/rbclutter.c: Add wrappers for the Cogl FBO API.

	* clutter/rbcogltexture.h: 
	* clutter/rbcogltexture.c (rb_cogl_texture_get_handle): Made the
	get handle function public.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcoglshader.h: 
	* clutter/rbcoglshader.c: 
	* clutter/rbcoglprogram.c: 
	* clutter/rbclutter.c: 